[TVB#114] Add system wide key shortcuts Change shortcut for reminder removal to Alt+Esc Change start command to support Java 8 and 9